# QuantFramework

./: .env.example  .gitignore  CLAUDE.md  README.md  backfill_ytd.py  pyproject.toml  run_backtest.py  run_daily.py
backtest/: CLAUDE.md  experiment_log.py  report.py  runner.py
backtest/tests/: test_experiment_log.py  test_runner.py
data/: CLAUDE.md  __main__.py  config.py  interfaces.py  store.py  sync.py
data/tests/: test_config.py  test_merge_incremental.py
docs/: DESIGN.md
docs/superpowers/specs/: 2026-04-13-notification-redesign.md  2026-04-13-strategy-layer-design.md
execution/: CLAUDE.md  interfaces.py  position.py
execution/tests/: test_diff.py  test_position.py
factors/: CLAUDE.md  _template.py  interfaces.py  momentum.py  quality_momentum.py  registry.py  registry.yaml  validator.py  volatility.py
factors/tests/: test_momentum.py  test_quality_momentum.py  test_registry.py  test_validator.py  test_volatility.py
notification/: CLAUDE.md  dingtalk.py  formatter.py  interfaces.py
notification/tests/: test_dingtalk.py  test_formatter.py
specs/: phase-0-scaffold.md  phase-1-data-layer.md  phase-2-factor-and-standardization.md  phase-3-backtest-engine.md  phase-5-execution-layer.md  phase-6-notification-layer.md
standardization/: CLAUDE.md  interfaces.py  methods.py
standardization/tests/: test_methods.py
strategy/: CLAUDE.md  base.py  interfaces.py  loader.py  momentum_rotation.py  top1.py
strategy/configs/: momentum_rotation.yaml  quality_momentum_top1.yaml
strategy/tests/: test_loader.py  test_momentum_rotation.py  test_top1.py
